@@ -1,30 +1,27 @@
 package igentuman.nc.datagen.blockstates;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import igentuman.nc.datagen.models.ModelProviderUtil;
 import igentuman.nc.datagen.models.NongeneratedModels;
 import igentuman.nc.util.DataGenUtil;
 import igentuman.nc.util.NCProperties;
-import net.minecraft.client.renderer.RenderStateShard;
 import net.minecraft.client.renderer.RenderType;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.core.Registry;
-import net.minecraft.core.Vec3i;
+import net.minecraft.state.Property;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.Direction;
 import net.minecraft.data.DataGenerator;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.packs.PackType;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.state.properties.Property;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.block.Block;
+import net.minecraft.util.registry.Registry;
 import net.minecraftforge.client.model.generators.*;
 import net.minecraftforge.client.model.generators.VariantBlockStateBuilder.PartialBlockstate;
-import net.minecraftforge.client.model.obj.OBJModel;
 import net.minecraftforge.common.data.ExistingFileHelper;
 
+import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.lang.reflect.Field;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -34,10 +31,11 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 
 import static igentuman.nc.NuclearCraft.MODID;
+import static net.minecraft.resources.ResourcePackType.CLIENT_RESOURCES;
 
 public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 {
-	protected static final List<Vec3i> COLUMN_THREE = ImmutableList.of(BlockPos.ZERO, BlockPos.ZERO.above(), BlockPos.ZERO.above(2));
+	protected static final List<BlockPos> COLUMN_THREE = Arrays.asList(BlockPos.ZERO, BlockPos.ZERO.above(), BlockPos.ZERO.above(2));
 
 	protected static final Map<ResourceLocation, String> generatedParticleTextures = new HashMap<>();
 	protected final ExistingFileHelper existingFileHelper;
@@ -116,7 +114,7 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 	protected NongeneratedModels.NongeneratedModel innerObj(String loc, @Nullable RenderType layer)
 	{
 		Preconditions.checkArgument(loc.endsWith(".obj"));
-		final var result = obj(loc.substring(0, loc.length()-4), modLoc(loc), innerModels);
+		final NongeneratedModels.NongeneratedModel result = obj(loc.substring(0, loc.length()-4), modLoc(loc), innerModels);
 		setRenderType(layer, result);
 		return result;
 	}
@@ -133,7 +131,7 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 
 	protected BlockModelBuilder obj(String loc, @Nullable RenderType layer)
 	{
-		final var model = obj(loc, models());
+		final BlockModelBuilder model = obj(loc, models());
 		setRenderType(layer, model);
 		return model;
 	}
@@ -199,7 +197,7 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 	{
 		String suffix = name.getPath().contains(".")?"": ".json";
 		Preconditions.checkState(
-				existingFileHelper.exists(name, PackType.CLIENT_RESOURCES, suffix, "models"),
+				existingFileHelper.exists(name, CLIENT_RESOURCES, suffix, "models"),
 				"Model \""+name+"\" does not exist");
 	}
 
@@ -210,11 +208,11 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 
 	protected void createHorizontalRotatedBlock(Supplier<? extends Block> block, ModelFile model)
 	{
-		createHorizontalRotatedBlock(block, $ -> model, List.of());
+		createHorizontalRotatedBlock(block, $ -> model, Arrays.asList());
 	}
 
 	protected void createHorizontalRotatedBlock(Supplier<? extends Block> block, ModelFile model, int offsetRotY) {
-		createRotatedBlock(block, $ -> model, NCProperties.FACING_HORIZONTAL, List.of(), 0, offsetRotY);
+		createRotatedBlock(block, $ -> model, NCProperties.FACING_HORIZONTAL, Arrays.asList(), 0, offsetRotY);
 	}
 
 	protected void createHorizontalRotatedBlock(Supplier<? extends Block> block, Function<PartialBlockstate, ModelFile> model, List<Property<?>> additionalProps)
@@ -224,7 +222,7 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 
 	protected void createAllRotatedBlock(Supplier<? extends Block> block, ModelFile model)
 	{
-		createAllRotatedBlock(block, $ -> model, List.of());
+		createAllRotatedBlock(block, $ -> model, Arrays.asList());
 	}
 
 	protected void createAllRotatedBlock(Supplier<? extends Block> block, Function<PartialBlockstate, ModelFile> model, List<Property<?>> additionalProps)
@@ -250,39 +248,26 @@ public abstract class ExtendedBlockstateProvider extends BlockStateProvider
 				int y;
 				switch(d)
 				{
-					case UP -> {
+					case UP:
 						x = 90;
 						y = 0;
-					}
-					case DOWN -> {
+					break;
+					case DOWN:
 						x = -90;
 						y = 0;
-					}
-					default -> {
+					break;
+					default:
 						y = getAngle(d, offsetRotY);
 						x = 0;
-					}
+					break;
 				}
 				state.with(facing, d).setModels(new ConfiguredModel(modelLoc, x+offsetRotX, y, false));
 			}
 		});
 	}
 
-	protected static String getName(RenderStateShard state)
-	{
-		//TODO clean up/speed up
-		try
-		{
-			// Datagen should only ever run in a deobf environment, so no need to use unreadable SRG names here
-			// This is a workaround for the fact that client-side Mixins are not applied in datagen
-			Field f = RenderStateShard.class.getDeclaredField("name");
-			f.setAccessible(true);
-			return (String)f.get(state);
-		} catch(Exception e)
-		{
-			throw new RuntimeException(e);
-		}
-	}
+
+
 
 	public static <T extends Comparable<T>> void forEach(PartialBlockstate base, Property<T> prop,
 														 List<Property<?>> remaining, Consumer<PartialBlockstate> out)
