@@ -3,21 +3,22 @@ package igentuman.nc.datagen.recipes.recipes;
 import igentuman.nc.content.processors.Processors;
 import igentuman.nc.recipes.ingredient.FluidStackIngredient;
 import igentuman.nc.content.materials.Materials;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.IFinishedRecipe;
 import net.minecraftforge.fluids.FluidStack;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
 public class CentrifugeRecipes extends AbstractRecipeProvider {
 
-    public static void generate(Consumer<FinishedRecipe> consumer) {
+    public static void generate(Consumer<IFinishedRecipe> consumer) {
         CentrifugeRecipes.consumer = consumer;
         ID = Processors.CENTRIFUGE;
 
         add(
                 fluidIngredient("carbon_dioxide", 1000),
-                List.of(
+                Arrays.asList(
                         fluidStack("carbon_dioxide", 125),
                         fluidStack("carbon_monoxide", 125),
                         fluidStack("carbon", 375),
@@ -27,7 +28,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient("irradiated_boron", 1000),
-                List.of(
+                Arrays.asList(
                         fluidStack(Materials.boron10, 500),
                         fluidStack(Materials.boron11, 500)
                 ), 1.5D
@@ -35,7 +36,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient("irradiated_lithium", 1000),
-                List.of(
+                Arrays.asList(
                         fluidStack(Materials.lithium6, 250),
                         fluidStack(Materials.lithium7, 250),
                         fluidStack("tritium", 500)
@@ -44,7 +45,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient("technical_water", 1000),
-                List.of(
+                Arrays.asList(
                         fluidStack("deuterium", 750),
                         fluidStack("oxygen", 250)
                 ), 1.9D
@@ -52,7 +53,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient(Materials.uranium, 160),
-                List.of(
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 144),
                         fluidStack(Materials.uranium235, 16)
                 ), 0.9D
@@ -60,7 +61,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient("fissile_fuel", 500),
-                List.of(
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 300),
                         fluidStack(Materials.uranium235, 80),
                         fluidStack(Materials.uranium233, 80),
@@ -72,7 +73,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
 
         add(
                 fluidIngredient("nuclear_waste", 50),
-                List.of(
+                Arrays.asList(
                         fluidStack(Materials.polonium, 5),
                         fluidStack(Materials.plutonium238, 5),
                         fluidStack(Materials.plutonium242, 5),
@@ -83,8 +84,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "americium", "hea-242", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "americium", "hea-242", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.americium243, 432), fluidStack(Materials.curium243, 144),
                         fluidStack(Materials.curium246, 288), fluidStack(Materials.berkelium247, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.promethium_147, 144)
@@ -92,8 +93,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "americium", "lea-242", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "americium", "lea-242", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.americium243, 432), fluidStack(Materials.curium243, 144),
                         fluidStack(Materials.curium246, 432), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.promethium_147, 144)
@@ -101,8 +102,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "thorium", "tbu", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "thorium", "tbu", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium233, 144), fluidStack(Materials.uranium238, 720),
                         fluidStack(Materials.neptunium236, 144), fluidStack(Materials.neptunium237, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -110,8 +111,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "uranium", "leu-233", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "uranium", "leu-233", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 720), fluidStack(Materials.plutonium241, 144),
                         fluidStack(Materials.plutonium242, 144), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -119,8 +120,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "uranium", "heu-233", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "uranium", "heu-233", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium235, 144), fluidStack(Materials.uranium238, 288),
                         fluidStack(Materials.plutonium242, 432), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -128,8 +129,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "uranium", "leu-235", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "uranium", "leu-235", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 576), fluidStack(Materials.plutonium239, 144),
                         fluidStack(Materials.plutonium242, 144), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -137,8 +138,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "uranium", "heu-235", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "uranium", "heu-235", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 288), fluidStack(Materials.plutonium239, 144),
                         fluidStack(Materials.plutonium242, 432), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -146,8 +147,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "neptunium", "len-236", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "neptunium", "len-236", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 576), fluidStack(Materials.neptunium237, 144),
                         fluidStack(Materials.plutonium241, 144), fluidStack(Materials.plutonium242, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.caesium_137, 144)
@@ -155,8 +156,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "neptunium", "hen-236", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "neptunium", "hen-236", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 576), fluidStack(Materials.plutonium238, 144),
                         fluidStack(Materials.plutonium241, 144), fluidStack(Materials.plutonium242, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.caesium_137, 144)
@@ -164,8 +165,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "plutonium", "lep-239", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "plutonium", "lep-239", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium246, 576), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.americium242, 144), fluidStack(Materials.plutonium242, 720),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -173,8 +174,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "plutonium", "hep-239", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "plutonium", "hep-239", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.americium243, 576), fluidStack(Materials.plutonium238, 144),
                         fluidStack(Materials.plutonium241, 144), fluidStack(Materials.americium242, 144),
                         fluidStack(Materials.caesium_137, 144), fluidStack(Materials.strontium_90, 144)
@@ -182,8 +183,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "plutonium", "lep-241", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "plutonium", "lep-241", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.plutonium242, 720), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.curium246, 144), fluidStack(Materials.berkelium247, 144),
                         fluidStack(Materials.promethium_147, 144), fluidStack(Materials.caesium_137, 144)
@@ -191,8 +192,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "plutonium", "hep-241", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "plutonium", "hep-241", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.americium243, 576), fluidStack(Materials.curium243, 144),
                         fluidStack(Materials.americium242, 144), fluidStack(Materials.plutonium241, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -200,8 +201,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "mixed", "mix-239", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "mixed", "mix-239", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 576), fluidStack(Materials.plutonium239, 144),
                         fluidStack(Materials.plutonium242, 144), fluidStack(Materials.americium243, 144),
                         fluidStack(Materials.strontium_90, 144), fluidStack(Materials.caesium_137, 144)
@@ -209,8 +210,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "mixed", "mix-241", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "mixed", "mix-241", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.uranium238, 576), fluidStack(Materials.neptunium237, 144),
                         fluidStack(Materials.plutonium241, 144), fluidStack(Materials.plutonium242, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.caesium_137, 144)
@@ -218,8 +219,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "lecm-243", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "lecm-243", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium246, 576), fluidStack(Materials.curium247, 144),
                         fluidStack(Materials.berkelium247, 288), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.promethium_147, 144)
@@ -227,8 +228,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "hecm-243", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "hecm-243", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium245, 432), fluidStack(Materials.curium245, 144),
                         fluidStack(Materials.berkelium247, 288), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.promethium_147, 144)
@@ -236,8 +237,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "lecm-245", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "lecm-245", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium246, 576), fluidStack(Materials.curium247, 144),
                         fluidStack(Materials.berkelium247, 288), fluidStack(Materials.californium249, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.europium_155, 144)
@@ -245,8 +246,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "hecm-245", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "hecm-245", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium246, 432), fluidStack(Materials.curium247, 144),
                         fluidStack(Materials.berkelium247, 288), fluidStack(Materials.californium249, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.europium_155, 144)
@@ -254,8 +255,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "lecm-247", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "lecm-247", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.curium246, 720), fluidStack(Materials.berkelium247, 144),
                         fluidStack(Materials.californium249, 144), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.europium_155, 144)
@@ -263,8 +264,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "curium", "hecm-247", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "curium", "hecm-247", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.californium251, 144), fluidStack(Materials.californium249, 144),
                         fluidStack(Materials.berkelium247, 576), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.molybdenum, 144), fluidStack(Materials.europium_155, 144)
@@ -272,8 +273,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "berkelium", "leb-248", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "berkelium", "leb-248", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.berkelium247, 720), fluidStack(Materials.berkelium248, 144),
                         fluidStack(Materials.californium249, 144), fluidStack(Materials.californium251, 144),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
@@ -281,8 +282,8 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "berkelium", "heb-248", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "berkelium", "heb-248", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.berkelium248, 144), fluidStack(Materials.californium249, 144),
                         fluidStack(Materials.californium251, 288), fluidStack(Materials.californium252, 3),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
@@ -290,32 +291,32 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "californium", "lecf-249", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "californium", "lecf-249", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.californium252, 1152),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
                 ),0.5D
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "californium", "hecf-249", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "californium", "hecf-249", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.californium252, 864), fluidStack(Materials.californium250, 288),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
                 ),1.5D
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "californium", "lecf-251", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "californium", "lecf-251", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.californium252, 1152),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
                 ),0.5D
         );
 
         add(
-                moltenFuelIngredient(List.of("depleted", "californium", "hecf-251", ""), 1296),
-                List.of(
+                moltenFuelIngredient(Arrays.asList("depleted", "californium", "hecf-251", ""), 1296),
+                Arrays.asList(
                         fluidStack(Materials.californium252, 1008),
                         fluidStack(Materials.ruthenium_106, 144), fluidStack(Materials.promethium_147, 144)
                 ),1.5D
@@ -324,7 +325,7 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
         for(String material: Materials.slurries()) {
             add(
                     fluidIngredient(material+"_slurry", 1000),
-                    List.of(
+                    Arrays.asList(
                             fluidStack(material+"_clean_slurry", 800),
                             fluidStack("hydrochloric_acid", 50),
                             fluidStack("nitric_acid", 50),
@@ -335,6 +336,6 @@ public class CentrifugeRecipes extends AbstractRecipeProvider {
     }
 
     protected static void add(FluidStackIngredient input, List<FluidStack> output, double...modifiers) {
-        fluidsAndFluids(List.of(input), output, modifiers);
+        fluidsAndFluids(Arrays.asList(input), output, modifiers);
     }
 }
