@@ -3,28 +3,29 @@ package igentuman.nc.datagen.recipes.recipes;
 import igentuman.nc.recipes.ingredient.NcIngredient;
 import igentuman.nc.content.processors.Processors;
 import igentuman.nc.content.materials.Materials;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.IFinishedRecipe;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
 public class FuelReprocessorRecipes extends AbstractRecipeProvider {
 
-    public static void generate(Consumer<FinishedRecipe> consumer) {
+    public static void generate(Consumer<IFinishedRecipe> consumer) {
         FuelReprocessorRecipes.consumer = consumer;
         ID = Processors.FUEL_REPROCESSOR;
 
         addString(
                 ingotIngredient("cyanite", 3),
-                List.of(
+                Arrays.asList(
                         "bigreactors:blutonium_ingot"
                 ), 4.5D
         );
 
-        for (String type: List.of("", "tr")) {
+        for (String type: Arrays.asList("", "tr")) {
             add(
-                    fuelIngredient(List.of("depleted", "americium", "hea-242", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "americium", "hea-242", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.americium243, 3), isotopeStack(Materials.curium243),
                             isotopeStack(Materials.curium246, 2), isotopeStack(Materials.berkelium247),
                             dustStack(Materials.molybdenum), dustStack(Materials.promethium_147)
@@ -32,8 +33,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "americium", "lea-242", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "americium", "lea-242", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.americium243, 3), isotopeStack(Materials.curium243),
                             isotopeStack(Materials.curium246, 3), isotopeStack(Materials.berkelium248),
                             dustStack(Materials.molybdenum), dustStack(Materials.promethium_147)
@@ -41,8 +42,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "thorium", "tbu", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "thorium", "tbu", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium233), isotopeStack(Materials.uranium238, 5),
                             isotopeStack(Materials.neptunium236), isotopeStack(Materials.neptunium237),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -50,8 +51,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "uranium", "leu-233", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "uranium", "leu-233", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 5), isotopeStack(Materials.plutonium241),
                             isotopeStack(Materials.plutonium242), isotopeStack(Materials.americium243),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -59,8 +60,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "uranium", "heu-233", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "uranium", "heu-233", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium235), isotopeStack(Materials.uranium238, 2),
                             isotopeStack(Materials.plutonium242, 3), isotopeStack(Materials.americium243),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -68,8 +69,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "uranium", "leu-235", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "uranium", "leu-235", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 4), isotopeStack(Materials.plutonium239),
                             isotopeStack(Materials.plutonium242), isotopeStack(Materials.americium243),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -77,8 +78,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "uranium", "heu-235", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "uranium", "heu-235", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 2), isotopeStack(Materials.plutonium239),
                             isotopeStack(Materials.plutonium242, 3), isotopeStack(Materials.americium243),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -86,8 +87,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "neptunium", "hen-236", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "neptunium", "hen-236", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 4), isotopeStack(Materials.neptunium237),
                             isotopeStack(Materials.plutonium241), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.molybdenum), dustStack(Materials.caesium_137)
@@ -95,8 +96,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "neptunium", "len-236", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "neptunium", "len-236", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.plutonium242, 5), isotopeStack(Materials.neptunium237),
                             isotopeStack(Materials.plutonium241), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.molybdenum), dustStack(Materials.caesium_137)
@@ -104,8 +105,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "plutonium", "lep-239", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "plutonium", "lep-239", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 4), isotopeStack(Materials.americium243),
                             isotopeStack(Materials.curium246), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.promethium_147), dustStack(Materials.strontium_90)
@@ -113,8 +114,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "plutonium", "hep-239", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "plutonium", "hep-239", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.americium243, 4), isotopeStack(Materials.curium243),
                             isotopeStack(Materials.plutonium241), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.promethium_147), dustStack(Materials.strontium_90)
@@ -122,8 +123,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "plutonium", "lep-241", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "plutonium", "lep-241", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.plutonium242, 5), isotopeStack(Materials.americium243),
                             isotopeStack(Materials.curium246), isotopeStack(Materials.berkelium247),
                             dustStack(Materials.promethium_147), dustStack(Materials.strontium_90)
@@ -131,8 +132,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "plutonium", "hep-241", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "plutonium", "hep-241", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.americium243, 3), isotopeStack(Materials.americium241),
                             isotopeStack(Materials.curium246, 2), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.promethium_147), dustStack(Materials.strontium_90)
@@ -140,8 +141,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "mixed", "mix-239", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "mixed", "mix-239", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 4), isotopeStack(Materials.plutonium239),
                             isotopeStack(Materials.plutonium242), isotopeStack(Materials.americium243),
                             dustStack(Materials.strontium_90), dustStack(Materials.caesium_137)
@@ -149,8 +150,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "mixed", "mix-241", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "mixed", "mix-241", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.uranium238, 4), isotopeStack(Materials.neptunium237),
                             isotopeStack(Materials.plutonium241), isotopeStack(Materials.plutonium242),
                             dustStack(Materials.molybdenum), dustStack(Materials.caesium_137)
@@ -158,8 +159,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "lecm-243", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "lecm-243", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.curium246, 4), isotopeStack(Materials.curium247),
                             isotopeStack(Materials.berkelium247, 2), isotopeStack(Materials.berkelium248),
                             dustStack(Materials.molybdenum), dustStack(Materials.promethium_147)
@@ -167,8 +168,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "hecm-243", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "hecm-243", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.curium245, 3), isotopeStack(Materials.curium245),
                             isotopeStack(Materials.berkelium247, 2), isotopeStack(Materials.berkelium248),
                             dustStack(Materials.molybdenum), dustStack(Materials.promethium_147)
@@ -176,8 +177,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "lecm-245", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "lecm-245", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.curium246, 4), isotopeStack(Materials.curium247),
                             isotopeStack(Materials.berkelium247, 2), isotopeStack(Materials.californium249),
                             dustStack(Materials.molybdenum), dustStack(Materials.europium_155)
@@ -185,8 +186,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "hecm-245", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "hecm-245", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.curium246, 3), isotopeStack(Materials.curium247),
                             isotopeStack(Materials.berkelium247, 2), isotopeStack(Materials.californium249),
                             dustStack(Materials.molybdenum), dustStack(Materials.europium_155)
@@ -194,8 +195,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "lecm-247", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "lecm-247", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.curium246, 5), isotopeStack(Materials.berkelium247),
                             isotopeStack(Materials.californium249), isotopeStack(Materials.berkelium248),
                             dustStack(Materials.molybdenum), dustStack(Materials.europium_155)
@@ -203,8 +204,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "curium", "hecm-247", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "curium", "hecm-247", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.californium251), isotopeStack(Materials.californium249),
                             isotopeStack(Materials.berkelium247, 4), isotopeStack(Materials.berkelium248),
                             dustStack(Materials.molybdenum), dustStack(Materials.europium_155)
@@ -212,8 +213,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "berkelium", "leb-248", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "berkelium", "leb-248", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.berkelium247, 5), isotopeStack(Materials.berkelium248),
                             isotopeStack(Materials.californium249), isotopeStack(Materials.californium251),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
@@ -221,8 +222,8 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "berkelium", "heb-248", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "berkelium", "heb-248", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.berkelium248), isotopeStack(Materials.californium249),
                             isotopeStack(Materials.californium251, 2), isotopeStack(Materials.californium252, 3),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
@@ -230,32 +231,32 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "californium", "lecf-249", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "californium", "lecf-249", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.californium252, 8),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
                     ), 0.5D
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "californium", "hecf-249", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "californium", "hecf-249", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.californium252, 6), isotopeStack(Materials.californium250, 2),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
                     ), 1.5D
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "californium", "lecf-251", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "californium", "lecf-251", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.californium252, 8),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
                     ), 0.5D
             );
 
             add(
-                    fuelIngredient(List.of("depleted", "californium", "hecf-251", type), 9),
-                    List.of(
+                    fuelIngredient(Arrays.asList("depleted", "californium", "hecf-251", type), 9),
+                    Arrays.asList(
                             isotopeStack(Materials.californium252, 7),
                             dustStack(Materials.ruthenium_106), dustStack(Materials.promethium_147)
                     ), 1.5D
@@ -265,12 +266,12 @@ public class FuelReprocessorRecipes extends AbstractRecipeProvider {
     }
 
     private static void addString(NcIngredient input, List<String> output, double...modifiers) {
-        itemsToItemsString(List.of(input), output, modifiers);
+        itemsToItemsString(Arrays.asList(input), output, modifiers);
     }
 
 
     private static void add(NcIngredient input, List<NcIngredient> output, double...modifiers) {
-        itemsToItems(List.of(input), output, modifiers);
+        itemsToItems(Arrays.asList(input), output, modifiers);
     }
 
 }
