@@ -2,15 +2,16 @@ package igentuman.nc.datagen.recipes.recipes;
 
 import igentuman.nc.content.processors.Processors;
 import igentuman.nc.recipes.ingredient.FluidStackIngredient;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.IFinishedRecipe;
 import net.minecraftforge.fluids.FluidStack;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
 public class GasScrubberRecipes extends AbstractRecipeProvider {
 
-    public static void generate(Consumer<FinishedRecipe> consumer) {
+    public static void generate(Consumer<IFinishedRecipe> consumer) {
         GasScrubberRecipes.consumer = consumer;
         ID = Processors.GAS_SCRUBBER;
 
@@ -21,6 +22,6 @@ public class GasScrubberRecipes extends AbstractRecipeProvider {
     }
 
     protected static void add(FluidStackIngredient input, FluidStack output, double...modifiers) {
-        fluidsAndFluids(List.of(input), List.of(output), modifiers);
+        fluidsAndFluids(Arrays.asList(input), Arrays.asList(output), modifiers);
     }
 }
