@@ -2,17 +2,19 @@ package igentuman.nc.datagen.recipes.recipes;
 
 import igentuman.nc.content.processors.Processors;
 import igentuman.nc.recipes.ingredient.FluidStackIngredient;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.IFinishedRecipe;
 import net.minecraftforge.fluids.FluidStack;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
-import static net.minecraft.world.level.material.Fluids.WATER;
+import static net.minecraft.fluid.Fluids.WATER;
+
 
 public class SteamTurbineRecipes extends AbstractRecipeProvider {
 
-    public static void generate(Consumer<FinishedRecipe> consumer) {
+    public static void generate(Consumer<IFinishedRecipe> consumer) {
         SteamTurbineRecipes.consumer = consumer;
         ID = Processors.STEAM_TURBINE;
 
@@ -31,6 +33,6 @@ public class SteamTurbineRecipes extends AbstractRecipeProvider {
     }
 
     protected static void add(FluidStackIngredient input, FluidStack output, double...modifiers) {
-        fluidsAndFluids(List.of(input), List.of(output), modifiers);
+        fluidsAndFluids(Arrays.asList(input), Arrays.asList(output), modifiers);
     }
 }
