@@ -2,21 +2,21 @@ package igentuman.nc.datagen.recipes.recipes;
 
 import igentuman.nc.content.processors.Processors;
 import igentuman.nc.recipes.ingredient.FluidStackIngredient;
-import net.minecraft.data.recipes.FinishedRecipe;
+import net.minecraft.data.IFinishedRecipe;
 import net.minecraftforge.fluids.FluidStack;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
-import static net.minecraft.world.level.material.Fluids.WATER;
 
 public class SupercoolerRecipes extends AbstractRecipeProvider {
 
-    public static void generate(Consumer<FinishedRecipe> consumer) {
+    public static void generate(Consumer<IFinishedRecipe> consumer) {
         SupercoolerRecipes.consumer = consumer;
         ID = Processors.SUPERCOOLER;
 
-        for(String gas: List.of("oxygen", "hydrogen", "nitrogen", "helium")) {
+        for(String gas: Arrays.asList("oxygen", "hydrogen", "nitrogen", "helium")) {
             add(
                     fluidIngredient(gas, 1000),
                     fluidStack("liquid_" + gas, 100)
@@ -50,6 +50,6 @@ public class SupercoolerRecipes extends AbstractRecipeProvider {
     }
 
     protected static void add(FluidStackIngredient input, FluidStack output, double...modifiers) {
-        fluidsAndFluids(List.of(input), List.of(output), modifiers);
+        fluidsAndFluids(Arrays.asList(input), Arrays.asList(output), modifiers);
     }
 }
