@@ -12,10 +12,7 @@ import igentuman.nc.multiblock.fission.FissionBlocks;
 import igentuman.nc.multiblock.turbine.TurbineRegistration;
 import net.minecraftforge.common.ForgeConfigSpec;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 
 
 public class ProcessorsConfig {
@@ -66,7 +63,7 @@ public class ProcessorsConfig {
             VEIN_BLOCKS_AMOUNT = builder
                     .comment("Min and max values of blocks per vein.")
                     .comment("Result amount will be random value in this range.")
-                    .define("blocks_per_vein", List.of(30000, 70000), o -> o instanceof ArrayList);
+                    .define("blocks_per_vein", Arrays.asList(30000, 70000), o -> o instanceof ArrayList);
 
             VEINS_RARITY = builder
                     .comment("Veins rarity. Bigger value - less veins.")
